# MeowVoxelEngine

./: CMakeLists.txt  MEngineInput.ini  README.md
MEngine/: CMakeLists.txt
MEngine/Resources/Model/: Standing Idle.mo  Standing Jump.mo
MEngine/Resources/Shader/: AntiAliasing.frag.glsl  CloudDensity.comp.glsl  DeferredLighting.frag.glsl  ImGui.frag.glsl  ImGui.vert.glsl  PBRLighting.frag.glsl  Primitive.frag.glsl  Primitive.vert.glsl  RayTracingPrototype.rchit.glsl  RayTracingPrototype.rgen.glsl  RayTracingPrototype.rmiss.glsl  ShadowDepth.vert.glsl  SkinMesh.comp.glsl  SkyAtmosphere.comp.glsl  SkyAtmosphere.frag.glsl  SkyAtmosphere.vert.glsl  SkyMultiScatteringLut.comp.glsl  SkyTransmittanceLut.comp.glsl  VolumetricClouds.comp.glsl  WaterOcean.comp.glsl
MEngine/Resources/Shader/D3D12/: AntiAliasing.hlsl  ForwardPrimitive.hlsl  Fullscreen.hlsl  PBRLighting.hlsl  Primitive.hlsl  ShadowDepth.hlsl  SkinMesh.hlsl
MEngine/include/MEngine/: MEngine.hpp
MEngine/include/MEngine/AnimationSystem/: AnimationSystem.hpp
MEngine/include/MEngine/Audio/: AudioSystem.hpp
MEngine/include/MEngine/Camera/: Camera.hpp
MEngine/include/MEngine/Core/: Log.hpp
MEngine/include/MEngine/InputSystem/: InputSystem.hpp
MEngine/include/MEngine/Physics/: PhysicsWorld.hpp  TerrainCollision.hpp
MEngine/include/MEngine/RenderBackend/: Primitive.hpp  RHIContext.hpp  RenderBackend.hpp
MEngine/include/MEngine/RenderBackend/D3D12/: D3D12RHI.hpp
MEngine/include/MEngine/RenderBackend/Vulkan/: VulkanBuffer.hpp  VulkanCommandContext.hpp  VulkanDevice.hpp  VulkanImGuiLayer.hpp  VulkanImage.hpp  VulkanRHI.hpp  VulkanRenderThread.hpp  VulkanRenderer.hpp  VulkanShader.hpp  VulkanSwapchain.hpp  VulkanUtils.hpp
MEngine/include/MEngine/Resources/: MeshAsset.hpp
MEngine/include/MEngine/Windows/: Window.hpp
MEngine/src/: MEngine.cpp
MEngine/src/AnimationSystem/: AnimationSystem.cpp
MEngine/src/Audio/: AudioSystem.cpp
MEngine/src/Camera/: Camera.cpp
MEngine/src/InputSystem/: InputSystem.cpp
MEngine/src/Physics/: PhysicsWorld.cpp  TerrainCollision.cpp
MEngine/src/RenderBackend/: RenderBackend.cpp
MEngine/src/RenderBackend/D3D12/: D3D12ImGuiLayer.cpp  D3D12ImGuiLayer.hpp  D3D12PrimitiveRenderer.cpp  D3D12PrimitiveRenderer.hpp  D3D12RHI.cpp  D3D12Utils.cpp  D3D12Utils.hpp
MEngine/src/RenderBackend/Vulkan/: VulkanBuffer.cpp  VulkanCommandContext.cpp  VulkanDevice.cpp  VulkanImGuiLayer.cpp  VulkanImage.cpp  VulkanRHI.cpp  VulkanRenderThread.cpp  VulkanRenderer.cpp  VulkanShader.cpp  VulkanSwapchain.cpp  VulkanUtils.cpp
MEngine/src/Resources/: MeshAsset.cpp
MEngine/src/UI/: README.md
MEngine/src/Windows/: Window.cpp
SandBox/: CMakeLists.txt
SandBox/Model/: Standing Idle.fbx  Standing Jump.fbx
SandBox/src/: AssetBaker.cpp  BlockInteraction.cpp  BlockInteraction.hpp  CameraUtils.cpp  CameraUtils.hpp  CommandLineOptions.cpp  CommandLineOptions.hpp  LruCache.hpp  ModelAssetPreprocessor.cpp  ModelAssetPreprocessor.hpp  PlayerController.cpp  PlayerController.hpp  PrimitiveWorld.cpp  PrimitiveWorld.hpp  SandboxApplication.cpp  SandboxApplication.hpp  WorldSubmission.cpp  WorldSubmission.hpp  main.cpp
